# file-handler-rust-api

./: .gitignore  Cargo.toml  README.md
file_api.Api/: Cargo.toml
file_api.Api/src/: main.rs
file_api.Core/: Cargo.toml
file_api.Core/src/: lib.rs
file_api.Core/src/module_domain/: models.rs
file_api.Persistence/: Cargo.toml
file_api.Persistence/src/: lib.rs
src/: main.rs
