[package]
name = "file_api_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
cargo-watch = "8.1.2"
file_api_core = {path = "../file_api.Core"}
file_api_persistence = {path = "../file_api.Persistence"}